stp-r940/src/parser/cvc.output
Terminals unused in grammar

   "END"
   "PUSH"
   "POP"
   '.'


Rules useless in parser due to conflicts

  101 Updates: Updates "WITH" '[' Expr ']' ":=" Expr


Grammar

    0 $accept: cmd $end

    1 cmd: other_cmd
    2    | other_cmd counterexample

    3 counterexample: COUNTEREXAMPLE_TOK ';'

    4 other_cmd: %empty
    5          | Query
    6          | VarDecls Query
    7          | other_cmd1 Query

    8 other_cmd1: VarDecls Asserts
    9           | Asserts
   10           | other_cmd1 VarDecls Asserts

   11 Asserts: Assert
   12        | Asserts Assert

   13 Assert: "ASSERT" Formula ';'

   14 Query: "QUERY" Formula ';'

   15 VarDecls: VarDecl ';'
   16         | VarDecls VarDecl ';'

   17 VarDecl: FORM_IDs ':' Type
   18        | FORM_IDs ':' Type '=' Expr
   19        | FORM_IDs ':' Type '=' Formula

   20 reverseFORM_IDs: FORMID_TOK
   21                | FORMID_TOK ',' reverseFORM_IDs

   22 FORM_IDs: reverseFORM_IDs

   23 ForDecl: FORMID_TOK ':' Type

   24 Type: BvType
   25     | BoolType
   26     | ArrayType

   27 BvType: "BV" '(' NUMERAL_TOK ')'

   28 BoolType: "BOOLEAN"

   29 ArrayType: "ARRAY" BvType "OF" BvType

   30 IfExpr: "IF" Formula "THEN" Expr ElseRestExpr

   31 ElseRestExpr: "ELSE" Expr "ENDIF"
   32             | "ELSIF" Expr "THEN" Expr ElseRestExpr

   33 Formula: '(' Formula ')'
   34        | FORMID_TOK
   35        | FORMID_TOK '(' Expr ')'
   36        | "BOOLEXTRACT" '(' Expr ',' NUMERAL_TOK ')'
   37        | Expr '=' Expr
   38        | Expr "/=" Expr
   39        | "FOR" '(' ForDecl ';' BVCONST_TOK ';' BVCONST_TOK ';' BVCONST_TOK ';' "EXCEPT" Formula ')' '{' Formula '}'
   40        | "FOR" '(' ForDecl ';' BVCONST_TOK ';' BVCONST_TOK ';' BVCONST_TOK ')' '{' Formula '}'
   41        | "NOT" Formula
   42        | Formula "OR" Formula
   43        | Formula "NOR" Formula
   44        | Formula "AND" Formula
   45        | Formula "NAND" Formula
   46        | Formula "=>" Formula
   47        | Formula "<=>" Formula
   48        | Formula "XOR" Formula
   49        | "BVLT" '(' Expr ',' Expr ')'
   50        | "BVGT" '(' Expr ',' Expr ')'
   51        | "BVLE" '(' Expr ',' Expr ')'
   52        | "BVGE" '(' Expr ',' Expr ')'
   53        | "BVSLT" '(' Expr ',' Expr ')'
   54        | "BVSGT" '(' Expr ',' Expr ')'
   55        | "BVSLE" '(' Expr ',' Expr ')'
   56        | "BVSGE" '(' Expr ',' Expr ')'
   57        | IfForm
   58        | "TRUE"
   59        | "FALSE"
   60        | "LET" LetDecls "IN" Formula

   61 IfForm: "IF" Formula "THEN" Formula ElseRestForm

   62 ElseRestForm: "ELSE" Formula "ENDIF"
   63             | "ELSIF" Formula "THEN" Formula ElseRestForm

   64 Exprs: Expr
   65      | Exprs ',' Expr

   66 Expr: TERMID_TOK
   67     | '(' Expr ')'
   68     | BVCONST_TOK
   69     | "BOOLBV" '(' Formula ')'
   70     | NUMERAL_TOK BIN_BASED_NUMBER
   71     | NUMERAL_TOK DEC_BASED_NUMBER
   72     | NUMERAL_TOK HEX_BASED_NUMBER
   73     | Expr '[' Expr ']'
   74     | Expr '(' Expr ')'
   75     | Expr '[' NUMERAL_TOK ':' NUMERAL_TOK ']'
   76     | "~" Expr
   77     | Expr "&" Expr
   78     | Expr "|" Expr
   79     | "BVXOR" '(' Expr ',' Expr ')'
   80     | "BVNAND" '(' Expr ',' Expr ')'
   81     | "BVNOR" '(' Expr ',' Expr ')'
   82     | "BVXNOR" '(' Expr ',' Expr ')'
   83     | "BVSX" '(' Expr ',' NUMERAL_TOK ')'
   84     | Expr "@" Expr
   85     | Expr "<<" NUMERAL_TOK
   86     | Expr ">>" NUMERAL_TOK
   87     | Expr ">>" Expr
   88     | "BVPLUS" '(' NUMERAL_TOK ',' Exprs ')'
   89     | "BVSUB" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   90     | "BVUMINUS" '(' Expr ')'
   91     | "BVMULT" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   92     | "BVDIV" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   93     | "BVMOD" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   94     | "SBVDIV" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   95     | "SBVREM" '(' NUMERAL_TOK ',' Expr ',' Expr ')'
   96     | IfExpr
   97     | ArrayUpdateExpr
   98     | "LET" LetDecls "IN" Expr

   99 ArrayUpdateExpr: Expr "WITH" Updates

  100 Updates: '[' Expr ']' ":=" Expr
  101        | Updates "WITH" '[' Expr ']' ":=" Expr

  102 LetDecls: LetDecl
  103         | LetDecls ',' LetDecl

  104 LetDecl: FORMID_TOK '=' Expr
  105        | FORMID_TOK ':' Type '=' Expr
  106        | FORMID_TOK '=' Formula
  107        | FORMID_TOK ':' Type '=' Formula


Terminals, with rules where they appear

$end (0) 0
'(' (40) 27 33 35 36 39 40 49 50 51 52 53 54 55 56 67 69 74 79 80 81
    82 83 88 89 90 91 92 93 94 95
')' (41) 27 33 35 36 39 40 49 50 51 52 53 54 55 56 67 69 74 79 80 81
    82 83 88 89 90 91 92 93 94 95
',' (44) 21 36 49 50 51 52 53 54 55 56 65 79 80 81 82 83 88 89 91 92
    93 94 95 103
'.' (46)
':' (58) 17 18 19 23 75 105 107
';' (59) 3 13 14 15 16 39 40
'=' (61) 18 19 37 104 105 106 107
'[' (91) 73 75 100 101
']' (93) 73 75 100 101
'{' (123) 39 40
'}' (125) 39 40
error (256)
"AND" (258) 44
"OR" (259) 42
"NOT" (260) 41
"FOR" (261) 39 40
"EXCEPT" (262) 39
"XOR" (263) 48
"NAND" (264) 45
"NOR" (265) 43
"=>" (266) 46
"<=>" (267) 47
"IF" (268) 30 61
"THEN" (269) 30 32 61 63
"ELSE" (270) 31 62
"ELSIF" (271) 32 63
"END" (272)
"ENDIF" (273) 31 62
"/=" (274) 38
":=" (275) 100 101
"BV" (276) 27
"<<" (277) 85
">>" (278) 86 87
"BVPLUS" (279) 88
"BVSUB" (280) 89
"BVUMINUS" (281) 90
"BVMULT" (282) 91
"BVDIV" (283) 92
"BVMOD" (284) 93
"SBVDIV" (285) 94
"SBVREM" (286) 95
"~" (287) 76
"&" (288) 77
"|" (289) 78
"BVXOR" (290) 79
"BVNAND" (291) 80
"BVNOR" (292) 81
"BVXNOR" (293) 82
"@" (294) 84
"BVLT" (295) 49
"BVGT" (296) 50
"BVLE" (297) 51
"BVGE" (298) 52
"BVSLT" (299) 53
"BVSGT" (300) 54
"BVSLE" (301) 55
"BVSGE" (302) 56
"BOOLBV" (303) 69
"BVSX" (304) 83
"BOOLEXTRACT" (305) 36
"ASSERT" (306) 13
"QUERY" (307) 14
"BOOLEAN" (308) 28
"ARRAY" (309) 29
"OF" (310) 29
"WITH" (311) 99 101
"TRUE" (312) 58
"FALSE" (313) 59
"IN" (314) 60 98
"LET" (315) 60 98
"PUSH" (316)
"POP" (317)
BVCONST_TOK (318) 39 40 68
TERMID_TOK (319) 66
FORMID_TOK (320) 20 21 23 34 35 104 105 106 107
COUNTEREXAMPLE_TOK (321) 3
NUMERAL_TOK (322) 27 36 70 71 72 75 83 85 86 88 89 91 92 93 94 95
BIN_BASED_NUMBER (323) 70
DEC_BASED_NUMBER (324) 71
HEX_BASED_NUMBER (325) 72


Nonterminals, with rules where they appear

$accept (82)
    on left: 0
cmd (83)
    on left: 1 2, on right: 0
counterexample (84)
    on left: 3, on right: 2
other_cmd (85)
    on left: 4 5 6 7, on right: 1 2
other_cmd1 (86)
    on left: 8 9 10, on right: 7 10
Asserts (87)
    on left: 11 12, on right: 8 9 10 12
Assert (88)
    on left: 13, on right: 11 12
Query (89)
    on left: 14, on right: 5 6 7
VarDecls (90)
    on left: 15 16, on right: 6 8 10 16
VarDecl (91)
    on left: 17 18 19, on right: 15 16
reverseFORM_IDs (92)
    on left: 20 21, on right: 21 22
FORM_IDs (93)
    on left: 22, on right: 17 18 19
ForDecl (94)
    on left: 23, on right: 39 40
Type (95)
    on left: 24 25 26, on right: 17 18 19 23 105 107
BvType (96)
    on left: 27, on right: 24 29
BoolType (97)
    on left: 28, on right: 25
ArrayType (98)
    on left: 29, on right: 26
IfExpr (99)
    on left: 30, on right: 96
ElseRestExpr (100)
    on left: 31 32, on right: 30 32
Formula (101)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55 56 57 58 59 60, on right: 13 14 19 30 33 39 40 41
    42 43 44 45 46 47 48 60 61 62 63 69 106 107
IfForm (102)
    on left: 61, on right: 57
ElseRestForm (103)
    on left: 62 63, on right: 61 63
Exprs (104)
    on left: 64 65, on right: 65 88
Expr (105)
    on left: 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
    84 85 86 87 88 89 90 91 92 93 94 95 96 97 98, on right: 18 30 31
    32 35 36 37 38 49 50 51 52 53 54 55 56 64 65 67 73 74 75 76 77
    78 79 80 81 82 83 84 85 86 87 89 90 91 92 93 94 95 98 99 100 101
    104 105
ArrayUpdateExpr (106)
    on left: 99, on right: 97
Updates (107)
    on left: 100 101, on right: 99 101
LetDecls (108)
    on left: 102 103, on right: 60 98 103
LetDecl (109)
    on left: 104 105 106 107, on right: 102 103


State 0

    0 $accept: . cmd $end

    "ASSERT"    shift, and go to state 1
    "QUERY"     shift, and go to state 2
    FORMID_TOK  shift, and go to state 3

    $default  reduce using rule 4 (other_cmd)

    cmd              go to state 4
    other_cmd        go to state 5
    other_cmd1       go to state 6
    Asserts          go to state 7
    Assert           go to state 8
    Query            go to state 9
    VarDecls         go to state 10
    VarDecl          go to state 11
    reverseFORM_IDs  go to state 12
    FORM_IDs         go to state 13


State 1

   13 Assert: "ASSERT" . Formula ';'

    "NOT"          shift, and go to state 14
    "FOR"          shift, and go to state 15
    "IF"           shift, and go to state 16
    "BVPLUS"       shift, and go to state 17
    "BVSUB"        shift, and go to state 18
    "BVUMINUS"     shift, and go to state 19
    "BVMULT"       shift, and go to state 20
    "BVDIV"        shift, and go to state 21
    "BVMOD"        shift, and go to state 22
    "SBVDIV"       shift, and go to state 23
    "SBVREM"       shift, and go to state 24
    "~"            shift, and go to state 25
    "BVXOR"        shift, and go to state 26
    "BVNAND"       shift, and go to state 27
    "BVNOR"        shift, and go to state 28
    "BVXNOR"       shift, and go to state 29
    "BVLT"         shift, and go to state 30
    "BVGT"         shift, and go to state 31
    "BVLE"         shift, and go to state 32
    "BVGE"         shift, and go to state 33
    "BVSLT"        shift, and go to state 34
    "BVSGT"        shift, and go to state 35
    "BVSLE"        shift, and go to state 36
    "BVSGE"        shift, and go to state 37
    "BOOLBV"       shift, and go to state 38
    "BVSX"         shift, and go to state 39
    "BOOLEXTRACT"  shift, and go to state 40
    "TRUE"         shift, and go to state 41
    "FALSE"        shift, and go to state 42
    "LET"          shift, and go to state 43
    '('            shift, and go to state 44
    BVCONST_TOK    shift, and go to state 45
    TERMID_TOK     shift, and go to state 46
    FORMID_TOK     shift, and go to state 47
    NUMERAL_TOK    shift, and go to state 48

    IfExpr           go to state 49
    Formula          go to state 50
    IfForm           go to state 51
    Expr             go to state 52
    ArrayUpdateExpr  go to state 53


State 2

   14 Query: "QUERY" . Formula ';'

    "NOT"          shift, and go to state 14
    "FOR"          shift, and go to state 15
    "IF"           shift, and go to state 16
    "BVPLUS"       shift, and go to state 17
    "BVSUB"        shift, and go to state 18
    "BVUMINUS"     shift, and go to state 19
    "BVMULT"       shift, and go to state 20
    "BVDIV"        shift, and go to state 21
    "BVMOD"        shift, and go to state 22
    "SBVDIV"       shift, and go to state 23
    "SBVREM"       shift, and go to state 24
    "~"            shift, and go to state 25
    "BVXOR"        shift, and go to state 26
    "BVNAND"       shift, and go to state 27
    "BVNOR"        shift, and go to state 28
    "BVXNOR"       shift, and go to state 29
    "BVLT"         shift, and go to state 30
    "BVGT"         shift, and go to state 31
    "BVLE"         shift, and go to state 32
    "BVGE"         shift, and go to state 33
    "BVSLT"        shift, and go to state 34
    "BVSGT"        shift, and go to state 35
    "BVSLE"        shift, and go to state 36
    "BVSGE"        shift, and go to state 37
    "BOOLBV"       shift, and go to state 38
    "BVSX"         shift, and go to state 39
    "BOOLEXTRACT"  shift, and go to state 40
    "TRUE"         shift, and go to state 41
    "FALSE"        shift, and go to state 42
    "LET"          shift, and go to state 43
    '('            shift, and go to state 44
    BVCONST_TOK    shift, and go to state 45
    TERMID_TOK     shift, and go to state 46
    FORMID_TOK     shift, and go to state 47
    NUMERAL_TOK    shift, and go to state 48

    IfExpr           go to state 49
    Formula          go to state 54
    IfForm           go to state 51
    Expr             go to state 52
    ArrayUpdateExpr  go to state 53


State 3

   20 reverseFORM_IDs: FORMID_TOK .
   21                | FORMID_TOK . ',' reverseFORM_IDs

    ','  shift, and go to state 55

    $default  reduce using rule 20 (reverseFORM_IDs)


State 4

    0 $accept: cmd . $end

    $end  shift, and go to state 56


State 5

    1 cmd: other_cmd .
    2    | other_cmd . counterexample

    COUNTEREXAMPLE_TOK  shift, and go to state 57

    $default  reduce using rule 1 (cmd)

    counterexample  go to state 58


State 6

    7 other_cmd: other_cmd1 . Query
   10 other_cmd1: other_cmd1 . VarDecls Asserts

    "QUERY"     shift, and go to state 2
    FORMID_TOK  shift, and go to state 3

    Query            go to state 59
    VarDecls         go to state 60
    VarDecl          go to state 11
    reverseFORM_IDs  go to state 12
    FORM_IDs         go to state 13


State 7

    9 other_cmd1: Asserts .
   12 Asserts: Asserts . Assert

    "ASSERT"  shift, and go to state 1

    $default  reduce using rule 9 (other_cmd1)

    Assert  go to state 61


State 8

   11 Asserts: Assert .

    $default  reduce using rule 11 (Asserts)


State 9

    5 other_cmd: Query .

    $default  reduce using rule 5 (other_cmd)


State 10

    6 other_cmd: VarDecls . Query
    8 other_cmd1: VarDecls . Asserts
   16 VarDecls: VarDecls . VarDecl ';'

    "ASSERT"    shift, and go to state 1
    "QUERY"     shift, and go to state 2
    FORMID_TOK  shift, and go to state 3

    Asserts          go to state 62
    Assert           go to state 8
    Query            go to state 63
    VarDecl          go to state 64
    reverseFORM_IDs  go to state 12
    FORM_IDs         go to state 13


State 11

   15 VarDecls: VarDecl . ';'

    ';'  shift, and go to state 65


State 12

   22 FORM_IDs: reverseFORM_IDs .

    $default  reduce using rule 22 (FORM_IDs)


State 13

   17 VarDecl: FORM_IDs . ':' Type
   18        | FORM_IDs . ':' Type '=' Expr
   19        | FORM_IDs . ':' Type '=' Formula

    ':'  shift, and go to state 66


State 14

   41 Formula: "NOT" . Formula

    "NOT"          shift, and go to state 14
    "FOR"          shift, and go to state 15
    "IF"           shift, and go to state 16
    "BVPLUS"       shift, and go to state 17
    "BVSUB"        shift, and go to state 18
    "BVUMINUS"     shift, and go to state 19
    "BVMULT"       shift, and go to state 20
    "BVDIV"        shift, and go to state 21
    "BVMOD"        shift, and go to state 22
    "SBVDIV"       shift, and go to state 23
    "SBVREM"       shift, and go to state 24
    "~"            shift, and go to state 25
    "BVXOR"        shift, and go to state 26
    "BVNAND"       shift, and go to state 27
    "BVNOR"        shift, and go to state 28
    "BVXNOR"       shift, and go to state 29
    "BVLT"         shift, and go to state 30
    "BVGT"         shift, and go to state 31
    "BVLE"         shift, and go to state 32
    "BVGE"         shift, and go to state 33
    "BVSLT"        shift, and go to state 34
    "BVSGT"        shift, and go to state 35
    "BVSLE"        shift, and go to state 36
    "BVSGE"        shift, and go to state 37
    "BOOLBV"       shift, and go to state 38
    "BVSX"         shift, and go to state 39
    "BOOLEXTRACT"  shift, and go to state 40
    "TRUE"         shift, and go to state 41
    "FALSE"        shift, and go to state 42
    "LET"          shift, and go to state 43
    '('            shift, and go to state 44
    BVCONST_TOK    shift, and go to state 45
    TERMID_TOK     shift, and go to state 46
    FORMID_TOK     shift, and go to state 47
    NUMERAL_TOK    shift, and go to state 48

    IfExpr           go to state 49
    Formula          go to state 67
    IfForm           go to state 51
    Expr             go to state 52
    ArrayUpdateExpr  go to state 53


State 15

   39 Formula: "FOR" . '(' ForDecl ';' BVCONST_TOK ';' BVCONST_TOK ';' BVCONST_TOK ';' "EXCEPT" Formula ')' '{' Formula '}'
   40        | "FOR" . '(' ForDecl ';' BVCONST_TOK ';' BVCONST_TOK ';' BVCONST_TOK ')' '{' Formula '}'

    '('  shift, and go to state 68


State 16

   30 IfExpr: "IF" . Formula "THEN" Expr ElseRestExpr
   61 IfForm: "IF" . Formula "THEN" Formula ElseRestForm

    "NOT"          shift, and go to state 14
    "FOR"          shift, and go to state 15
    "IF"           shift, and go to state 16
    "BVPLUS"       shift, and go to state 17
    "BVSUB"        shift, and go to state 18
    "BVUMINUS"     shift, and go to state 19
    "BVMULT"       shift, and go to state 20
    "BVDIV"        shift, and go to state 21
    "BVMOD"        shift, and go to state 22
    "SBVDIV"       shift, and go to state 23
    "SBVREM"       shift, and go to state 24
    "~"            shift, and go to state 25
    "BVXOR"        shift, and go to state 26
    "BVNAND"       shift, and go to state 27
    "BVNOR"        shift, and go to state 28
    "BVXNOR"       shift, and go to state 29
    "BVLT"         shift, and go to state 30
    "BVGT"         shift, and go to state 31
    "BVLE"         shift, and go to state 32
    "BVGE"         shift, and go to state 33
    "BVSLT"        shift, and go to state 34
    "BVSGT"        shift, and go to state 35
    "BVSLE"        shift, and go to state 36
    "BVSGE"        shift, and go to state 37
    "BOOLBV"       shift, and go to state 38
    "BVSX"         shift, and go to state 39
    "BOOLEXTRACT"  shift, and go to state 40
    "TRUE"         shift, and go to state 41
    "FALSE"        shift, and go to state 42
    "LET"          shift, and go to state 43
    '('            shift, and go to state 44
    BVCONST_TOK    shift, and go to state 45
    TERMID_TOK     shift, and go to state 46
    FORMID_TOK     shift, and go to state 47
    NUMERAL_TOK    shift, and go to state 48

    IfExpr           go to state 49
    Formula          go to state 69
    IfForm           go to state 51
    Expr             go to state 52
    ArrayUpdateExpr  go to state 53


State 17

   88 Expr: "BVPLUS" . '(' NUMERAL_TOK ',' Exprs ')'

    '('  shift, and go to state 70


State 18

   89 Expr: "BVSUB" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 71


State 19

   90 Expr: "BVUMINUS" . '(' Expr ')'

    '('  shift, and go to state 72


State 20

   91 Expr: "BVMULT" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 73


State 21

   92 Expr: "BVDIV" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 74


State 22

   93 Expr: "BVMOD" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 75


State 23

   94 Expr: "SBVDIV" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 76


State 24

   95 Expr: "SBVREM" . '(' NUMERAL_TOK ',' Expr ',' Expr ')'

    '('  shift, and go to state 77


State 25

   76 Expr: "~" . Expr

    "IF"         shift, and go to state 78
    "BVPLUS"     shift, and go to state 17
    "BVSUB"      shift, and go to state 18
    "BVUMINUS"   shift, and go to state 19
    "BVMULT"     shift, and go to state 20
    "BVDIV"      shift, and go to state 21
    "BVMOD"      shift, and go to state 22
    "SBVDIV"     shift, and go to state 23
    "SBVREM"     shift, and go to state 24
    "~"          shift, and go to state 25
    "BVXOR"      shift, and go to state 26
    "BVNAND"     shift, and go to state 27
    "BVNOR"      shift, and go to state 28
    "BVXNOR"     shift, and go to state 29
    "BOOLBV"     shift, and go to state 38
    "BVSX"       shift, and go to state 39
    "LET"        shift, and go to state 79
    '('          shift, and go to state 80
    BVCONST_TOK  shift, and go to state 45
    TERMID_TOK   shift, and go to state 46
    NUMERAL_TOK  shift, and go to state 48

    IfExpr           go to state 49
    Expr             go to state 81
    ArrayUpdateExpr  go to state 53


State 26

   79 Expr: "BVXOR" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 82


State 27

   80 Expr: "BVNAND" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 83


State 28

   81 Expr: "BVNOR" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 84


State 29

   82 Expr: "BVXNOR" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 85


State 30

   49 Formula: "BVLT" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 86


State 31

   50 Formula: "BVGT" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 87


State 32

   51 Formula: "BVLE" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 88


State 33

   52 Formula: "BVGE" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 89


State 34

   53 Formula: "BVSLT" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 90


State 35

   54 Formula: "BVSGT" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 91


State 36

   55 Formula: "BVSLE" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 92


State 37

   56 Formula: "BVSGE" . '(' Expr ',' Expr ')'

    '('  shift, and go to state 93


State 38

   69 Expr: "BOOLBV" . '(' Formula ')'

    '('  shift, and go to state 94


State 39

   83 Expr: "BVSX" . '(' Expr ',' NUMERAL_TOK ')'

    '('  shift, and go to state 95


State 40

   36 Formula: "BOOLEXTRACT" . '(' Expr ',' NUMERAL_TOK ')'

    '('  shift, and go to state 96


State 41

   58 Formula: "TRUE" .

    $default  reduce using rule 58 (Formula)


State 42

   59 Formula: "FALSE" .

    $default  reduce using rule 59 (Formula)


State 43

   60 Formula: "LET" . LetDecls "IN" Formula
   98 Expr: "LET" . LetDecls "IN" Expr

    FORMID_TOK  shift, and go to state 97

    LetDecls  go to state 98
    LetDecl   go to state 99


State 44

   33 Formula: '(' . Formula ')'
   67 Expr: '(' . Expr ')'

    "NOT"          shift, and go to state 14
    "FOR"          shift, and go to state 15
    "IF"           shift, and go to state 16
    "BVPLUS"       shift, and go to state 17
    "BVSUB"        shift, and go to state 18
    "BVUMINUS"     shift, and go to state 19
    "BVMULT"       shift, and go to state 20
    "BVDIV"        shift, and go to state 21
    "BVMOD"        shift, and go to state 22
    "SBVDIV"       shift, and go to state 23
    "SBVREM"       shift, and go to state 24
    "~"            shift, and go to state 25
    "BVXOR"        shift, and go to state 26
    "BVNAND"       shift, and go to state 27
    "BVNOR"        shift, and go to state 28
    "BVXNOR"       shift, and go to state 29
    "BVLT"         shift, and go to state 30
    "BVGT"         shift, and go to state 31
    "BVLE"         shift, and go to state 32
    "BVGE"         shift, and go to state 33
    "BVSLT"        shift, and go to state 34
    "BVSGT"        shift, and go to state 35
    "BVSLE"        shift, and go to state 36
    "BVSGE"        shift, and go to state 37
    "BOOLBV"       shift, and go to state 38
    "BVSX"         shift, and go to state 39
    "BOOLEXTRACT"  shift, and go to state 40
    "TRUE"         shift, and go to state 41
    "FALSE"        shift, and go to state 42
    "LET"          shift, and go to state 43
    '('            shift, and go to state 44
    BVCONST_TOK    shift, and go to state 45
    TERMID_TOK     shift, and go to state 46
    FORMID_TOK     shift, and go to state 47
    NUMERAL_TOK    shift, and go to state 48

    IfExpr           go to state 49
    Formula          go to state 100
    IfForm           go to state 51
    Expr             go to state 101
    ArrayUpdateExpr  go to state 53


State 45

   68 Expr: BVCONST_TOK .

    $default  reduce using rule 68 (Expr)


State 46

   66 Expr: TERMID_TOK .

    $default  reduce using rule 66 (Expr)


State 47

   34 Formula: FORMID_TOK .
   35        | FORMID_TOK . '(' Expr ')'

    '('  shift, and go to state 102

    $default  reduce using rule 34 (Formula)


State 48

   70 Expr: NUMERAL_TOK . BIN_BASED_NUMBER
   71     | NUMERAL_TOK . DEC_BASED_NUMBER
   72     | NUMERAL_TOK . HEX_BASED_NUMBER

    BIN_BASED_NUMBER  shift, and go to state 103
    DEC_BASED_NUMBER  shift, and go to state 104
    HEX_BASED_NUMBER  shift, and go to state 105


State 49

   96 Expr: IfExpr .

    $default  reduce using rule 96 (Expr)


State 50

   13 Assert: "ASSERT" Formula . ';'
   42 Formula: Formula . "OR" Formula
   43        | Formula . "NOR" Formula
   44        | Formula . "AND" Formula
   45        | Formula . "NAND" Formula
   46        | Formula . "=>" Formula
   47        | Formula . "<=>" Formula
   48        | Formula . "XOR" Formula

    "AND"   shift, and go to state 106
    "OR"    shift, and go to state 107
    "XOR"   shift, and go to state 108
    "NAND"  shift, and go to state 109
    "NOR"   shift, and go to state 110
    "=>"    shift, and go to state 111
    "<=>"   shift, and go to state 112
    ';'     shift, and go to state 113


State 51

   57 Formula: IfForm .

    $default  reduce using rule 57 (Formula)


State 52

   37 Formula: Expr . '=' Expr
   38        | Expr . "/=" Expr
   73 Expr: Expr . '[' Expr ']'
   74     | Expr . '(' Expr ')'
   75     | Expr . '[' NUMERAL_TOK ':' NUMERAL_TOK ']'
   77     | Expr . "&" Expr
   78     | Expr . "|" Expr
   84     | Expr . "@" Expr
   85     | Expr . "<<" NUMERAL_TOK
   86     | Expr . ">>" NUMERAL_TOK
   87     | Expr . ">>" Expr
   99 ArrayUpdateExpr: Expr . "WITH" Updates

    "/="    shift, and go to state 114
    "<<"    shift, and go to state 115
    ">>"    shift, and go to state 116
    "&"     shift, and go to state 117
    "|"     shift, and go to state 118
    "@"     shift, and go to state 119
    "WITH"  shift, and go to state 120
    '='     shift, and go to state 121
    '['     shift, and go to state 122
    '('     shift, and go to state 123


State 53

   97 Expr: ArrayUpdateExpr .

    $default  reduce using rule 97 (Expr)


State 54

   14 Query: "QUERY" Formula . ';'
   42 Formula: Formula . "OR" Formula
   43        | Formula . "NOR" Formula
   44        | Formula . "AND" Formula
   45        | Formula . "NAND" Formula
   46        | Formula . "=>" Formula
   47        | Formula . "<=>" Formula
   48        | Formula . "XOR" Formula

    "AND"   shift, and go to state 106
    "OR"    shift, and go to state 107
    "XOR"   shift, and go to state 108
    "NAND"  shift, and go to state 109
    "NOR"   shift, and go to state 110
    "=>"    shift, and go to state 111
    "<=>"   shift, and go to state 112
    ';'     shift, and go to state 124


State 55

   21 reverseFORM_IDs: FORMID_TOK ',' . reverseFORM_IDs

    FORMID_TOK  shift, and go to state 3

    reverseFORM_IDs  go to state 125


State 56

    0 $accept: cmd $end .

    $default  accept


State 57

    3 counterexample: COUNTEREXAMPLE_TOK . ';'

    ';'  shift, and go to state 126


State 58

    2 cmd: other_cmd counterexample .

    $default  reduce using rule 2 (cmd)


State 59

    7 other_cmd: other_cmd1 Query .

    $default  reduce using rule 7 (other_cmd)


State 60

   10 other_cmd1: other_cmd1 VarDecls . Asserts
   16 VarDecls: VarDecls . VarDecl ';'

    "ASSERT"    shift, and go to state 1
    FORMID_TOK  shift, and go to state 3

    Asserts          go to state 127
    Assert           go to state 8
    VarDecl          go to state 64
    reverseFORM_IDs  go to state 12
    FORM_IDs         go to state 13


State 61

   12 Asserts: Asserts Assert .

    $default  reduce using rule 12 (Asserts)


State 62

    8 other_cmd1: VarDecls Asserts .
   12 Asserts: Asserts . Assert

    "ASSERT"  shift, and go to state 1

    $default  reduce using rule 8 (other_cmd1)

    Assert  go to state 61


State 63

    6 other_cmd: VarDecls Query .

    $default  reduce using rule 6 (other_cmd)


State 64

   16 VarDecls: VarDecls VarDecl . ';'

    ';'  shift, and go to state 128


State 65

   15 VarDecls: VarDecl ';' .

    $default  reduce using rule 15 (VarDecls)


State 66

   17 VarDecl: FORM_IDs ':' . Type
   18        | FORM_IDs ':' . Type '=' Expr
   19        | FORM_IDs ':' . Type '=' Formula

    "BV"       shift, and go to state 129
    "BOOLEAN"  shift, and go to state 130
    "ARRAY"    shift, and go to state 131

    Type       go to state 132
    BvType     go to state 133
    BoolType   go to state 134
    ArrayType  go to state 135


State 67

   41 Formula: "NOT" Formula .
   42        | Formula . "OR" Formula
   43        | Formula . "NOR" Formula
   44        | Formula . "AND" Formula
   45        | Formula . "NAND" Formula
   46        | Formula . "=>" Formula
   47        | Formula . "<=>" Formula
   48        | Formula . "XOR" Formula

    $default  reduce using rule 41 (Formula)


State 68

   39 Formula: "FOR" '(' . ForDecl ';' BVCONST_TOK ';' BVCONST_TOK ';' BVCONST_TOK ';' "EXCEPT" Formula ')' '{' Formula '}'
   40        | "FOR" '(' . ForDecl ';' BVCONST_TOK ';' BVCONST_TOK ';' BVCONST_TOK ')' '{' Formula '}'

    FORMID_TOK  shift, and go to state 136

    ForDecl  go to state 137


State 69

   30 IfExpr: "IF" Formula . "THEN" Expr ElseRestExpr
   42 Formula: Formula . "OR" Formula
   43        | Formula . "NOR" Formula
   44        | Formula . "AND" Formula
   45        | Formula . "NAND" Formula
   46        | Formula . "=>" Formula
   47        | Formula . "<=>" Formula
   48        | Formula . "XOR" Formula
   61 IfForm: "IF" Formula . "THEN" Formula ElseRestForm

    "AND"   shift, and go to state 106
    "OR"    shift, and go to state 107
    "XOR"   shift, and go to state 108
    "NAND"  shift, and go to state 109
    "NOR"   shift, and go to state 110
    "=>"    shift, and go to state 111
    "<=>"   shift, and go to state 112
    "THEN"  shift, and go to state 138


State 70

   88 Expr: "BVPLUS" '(' . NUMERAL_TOK ',' Exprs ')'

    NUMERAL_TOK  shift, and go to state 139


State 71

   89 Expr: "BVSUB" '(' . NUMERAL_TOK ',' Expr ',' Expr ')'

    NUMERAL_TOK  shift, and go to state 140


State 72

   90 Expr: "BVUMINUS" '(' . Expr ')'
